- Merged API requests into 1  - Converted API calls to receive body parameters instead of path parameters
